--- a/index.html
+++ b/index.html
@@ -1,20 +1,32 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.01//EN" "http://www.w3.org/TR/html4/strict.dtd">
 <html>
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
-    <title>Current spectrum</title>
- </head>
+    <meta>
+    <title>My index</title>
+    <link href="black.css" rel="stylesheet" type="text/css">
+</head>
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-6RQYML4P32"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-6RQYML4P32');
+</script>
 <body>
-
-    <div id="header">
-        <h2 id="polytec">Current Spectrum</h2>
+    <center>
+        <h1>My index</h1>
+    </center>
+    <div id="reference">
+        <ul>
+            <li><a href="photo"><h4>Photo</h4></a> </li>
+            <!-- <li><a href="software">software</a> </li> -->
+         </ul>
     </div>
-
- 
+    <!---Copyright--->
     <div id="footer">
-        Copyright &copy; 2024
-
+        All contents copyright &copy; <a href="https://forum.ixbt.com/users.cgi?id=email:vgrin"><b>vgrin</b></a>, first published May 20, 2020. Ver 1.00, May 20, 2020.
     </div>
-
+    <!---Copyright--->
 </body>
 </html>
